# bet-analysis

./: .env.example  .gitignore  README.md  pyproject.toml
src/bet_analysis/: __init__.py  cache.py  config.py  models.py  server.py
src/bet_analysis/data/: api_sports.py  base.py  sofascore.py
